--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,9 +10,11 @@ body {
   font-size: 1.6em;
 }
 h1{
-  font-size: 5rem;
+  font-size: 5em;
 }
-
+p {
+  font-size: 2.5rem;
+}
 
 @media screen and (max-width: 640px) {
     html {
