--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,13 +4,13 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 body {
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 h1{
-  font-size: 5em;
+  font-size: 5rem;
 }
 p {
   font-size: 2.5rem;
@@ -18,6 +18,6 @@ p {
 
 @media screen and (max-width: 640px) {
     html {
-      font-size: 70%;
+      font-size: 7px;
     }
 }
