--- a/src/assets/css/headline.css
+++ b/src/assets/css/headline.css
@@ -6,7 +6,7 @@
 .headline-body {
     margin: 0;
     display: inline-block;
-    font-size: 6em;
+    font-size: 6rem;
     text-align: center;
     letter-spacing: var(--headline-spacing);
     vertical-align: middle;
@@ -14,6 +14,7 @@
 
 .headline-fontawesome {
     margin-right: var(--headline-spacing);
+    font-size: 4rem;
 }
 
 .headline-image {
