--- a/src/assets/css/section.css
+++ b/src/assets/css/section.css
@@ -1,10 +1,10 @@
 .section-body {
     width: 80vw;
-    min-width: 60em;
+    min-width: 60rem;
     margin: auto;
-    margin-top: 4em;
+    margin-top: 4rem;
     text-align: left;
-    padding: 0 2em;
+    padding: 0 2rem;
 }
 
 .section-image {
@@ -12,6 +12,6 @@
     display: block;
     margin: auto;
     border-radius: 5%;
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
     box-shadow: 0.1em 0.1em 2em;
 }
