update: 端末アクセス時はsectionの横幅を拡大

--- a/src/assets/css/section.css
+++ b/src/assets/css/section.css
@@ -17,3 +17,9 @@
 .section-not-first {
     margin-top: 10rem;
 }
+
+@media screen and (max-width: 640px) {
+    .section-body {
+        width: 95vw;
+    }
+}
