add: headlineに下線を追加

--- a/src/assets/css/headline.css
+++ b/src/assets/css/headline.css
@@ -10,6 +10,8 @@
     text-align: center;
     letter-spacing: var(--headline-spacing);
     vertical-align: middle;
+    padding: 0 1.5rem;
+    border-bottom: 0.2rem solid var(--main-dark-font-color);
 }
 
 .headline-fontawesome {
