update: プロダクト詳細とviewの隙間を開ける

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -23,6 +23,7 @@
     width: 90%;
     border-left: solid 1rem var(--main-dark-bg-color);
     padding-left: 3rem;
+    margin-bottom: 1rem;
 }
 
 .product-view {
