--- a/src/assets/css/products.css
+++ b/src/assets/css/products.css
@@ -14,9 +14,9 @@
 }
 
 .product-link {
-    font-size: 2.2rem;
-    padding: 0;
-    vertical-align: top;
+    font-size: 1.5rem;
+    padding: 0 1rem;
+    margin: 0;
 }
 
 .product-details {
@@ -60,4 +60,10 @@
     -ms-transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 640px) {
+    .product-tech {
+        padding: 0 0.5rem;
+    }
 }
