update: プロダクト名の一文字目はテーマカラーへ

--- a/src/assets/css/products.css
+++ b/src/assets/css/products.css
@@ -3,6 +3,10 @@
     margin-bottom: 7rem;
 }
 
+.product-name:first-letter {
+    color: var(--main-light-theme-color);
+}
+
 .product-description {
     font-size: 2rem;
 }
