update: (スマホ)サービス詳細の左線を細く

--- a/src/assets/css/products.css
+++ b/src/assets/css/products.css
@@ -71,4 +71,8 @@
     .product-tech {
         padding: 0 0.5rem;
     }
+
+    .product-details {
+        border-left: solid 0.5rem var(--main-dark-bg-color);
+    }
 }
