refactor: クラス名の命名規則を統一

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -12,7 +12,7 @@ html {
   padding: 0;
 }
 
-.App {
+.app {
     text-align: center;
     background-color: var(--main-light-bg-color);
     height: 100%;
