--- a/src/assets/css/langs.css
+++ b/src/assets/css/langs.css
@@ -1,11 +1,16 @@
 .lang-section-body {
-    width: 90%;
-    margin: auto;
     letter-spacing: 1.5rem;
+}
+
+.lang-section {
+    margin: 0 4rem;
 }
 
 @media screen and (max-width: 640px) {
     .lang-section-body {
         letter-spacing: 1rem;
+    }
+    .lang-section {
+        margin: 0 3rem;
     }
 }
