--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -24,7 +24,7 @@
 
 .header-bg {
     background-color: var(--main-dark-bg-color);
-    width: 100vw;
+    width: 100%;
     height: 20rem;
     z-index: 1;
     position: absolute;
