--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -39,7 +39,15 @@ body {
   background-color: var(--main-dark-bg-color);
 }
 
-.p-large {
+h1{
+  font-size: 5rem;
+}
+
+.default-font {
+  font-size: 2.5rem;
+}
+
+.large-font {
   font-size: 3.5rem;
 }
 
